# Pass-LLM-with-LLM

./: .env.example  .gitattributes  .gitignore  .mcp.example.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  START_HERE.md  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
algorithms/practice/: dp_basics.py  dp_grid_knapsack.py  greedy.py  two_pointers.py
docs/: INDEX.md  mcp-setup-guide.md  open-source-plan.md
exam_memory/: embedding.py  rebuild_index.py  server.py  vector_store.py
llm/: data_structures_cheatsheet.md
prompts/: new_session_prompt.md
scripts/: check_docs_links.py  check_main_extraction.py
shared/cheatsheets/: agent_project_pitch.md  llm_core_cheatsheet.md  sft_lora_miniproject.md
shared/exam_memory/: __init__.py  chunking.py  embedding.py  frontmatter.py  fts_store.py  hybrid_search.py  knowledge_source.py  pyproject.toml  question_bank.py  rebuild_index.py  review_builder.py  review_cli.py  review_schedule.py  server.py  source_connector.py  source_registry.py  sources.yaml  vector_store.py
shared/exam_memory/bank/: README.md
skills/: algo-annotation.md  choice-q-create.md  choice-q-drill.md  exam-assistant.md  init-guide.md  review-tracker.md
skills/solve-analyze/: SKILL.md
targets/: exam_config_template.md
tests/: conftest.py  test_check_main_extraction.py  test_knowledge_source.py  test_question_bank.py  test_rebuild_index.py  test_review_builder.py  test_review_cli.py  test_review_schedule.py  test_source_connector.py
(+25 files in other folders)
