[project]
name = "exam-memory"
version = "2.0.0"
description = "考试经验沉淀 MCP Server — V2 语义检索 + FTS 词法混合"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
ingest = [
    "docling>=2.0",
    "gitingest>=0.1",
    "PyGithub>=2.0",
    "beautifulsoup4>=4.12",
]
generate = [
    "litellm>=1.0",
]
full = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "docling>=2.0",
    "gitingest>=0.1",
    "PyGithub>=2.0",
    "beautifulsoup4>=4.12",
    "litellm>=1.0",
]

[project.scripts]
exam-memory = "exam_memory.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
